--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,18 +11,18 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/round"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:src="@drawable/supp"
             android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            android:src="@drawable/supp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -48,8 +47,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="3dp"
-                android:padding="2dp"
                 android:fontFamily="@font/abeezee"
+                android:padding="2dp"
                 android:text="@string/online"
                 android:textColor="@color/white"
                 android:textSize="15sp" />
@@ -62,9 +61,8 @@
             android:layout_gravity="end"
             android:layout_marginEnd="5dp"
             android:onClick="menu"
-            android:src="@drawable/sharp_more_vert_24"
             android:padding="5dp"
-            />
+            android:src="@drawable/sharp_more_vert_24" />
 
         <ImageView
             android:id="@+id/menu"
@@ -110,56 +108,109 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
-            android:id="@+id/lin"
             android:layout_width="match_parent"
-            android:layout_height="65dp"
-            android:gravity="center"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/et_message"
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_weight="0.8"
-                android:maxLines="10"
-                android:background="@color/white"
-                android:fontFamily="@font/abeezee"
-                android:gravity="bottom"
-                android:hint="@string/enter_text"
-                android:inputType="textMultiLine"
-                android:padding="15dp"
-                android:textColor="@color/black"
-                android:textColorHint="@color/textcolor"
-                android:textSize="17sp" />
+                android:orientation="horizontal">
 
-            <View
-                android:layout_width="1dp"
-                android:layout_height="35dp"
-                android:background="@color/textcolor" />
+                <EditText
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:imeOptions="actionSend"
+                    android:id="@+id/et_message"
+                    android:layout_marginStart="5dp"
+                    android:layout_weight="1"
+                    android:maxLines="2"
+                    android:background="@color/white"
+                    android:padding="18dp"
+                    android:textColorHint="@color/textcolor"
+                    android:hint="@string/enter_text"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    android:inputType="textMultiLine"
+                    android:fontFamily="@font/abeezee"/>
 
-            <ImageButton
-                android:id="@+id/btnVoice"
-                android:onClick="voice"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:padding="11dp"
-                android:src="@drawable/ic_voice" />
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="28dp"
+                    android:layout_gravity="center|end"
+                    android:background="@color/textcolor"/>
 
-            <ImageButton
-                android:id="@+id/btnSend"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:background="@color/white"
-                android:padding="11dp"
-                android:src="@drawable/ic_send" />
+            </LinearLayout>
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content">
+
+                <ImageButton
+                    android:id="@+id/btnVoice"
+                    android:layout_width="wrap_content"
+                    android:onClick="voice"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_voice"
+                    android:background="@color/white"
+                    android:layout_gravity="center"/>
+
+                <ImageButton
+                    android:id="@+id/btnSend"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    android:src="@drawable/ic_send"
+                    android:background="@color/white"
+                    android:layout_gravity="center"/>
+
+            </FrameLayout>
 
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--<EditText-->
+    <!--android:id="@+id/et_message"-->
+    <!--android:layout_width="0dp"-->
+    <!--android:imeOptions="actionSend"-->
+    <!--android:layout_weight="78"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginStart="5dp"-->
+    <!--android:maxLines="10"-->
+    <!--android:background="@color/white"-->
+    <!--android:fontFamily="@font/abeezee"-->
+    <!--android:gravity="bottom"-->
+    <!--android:hint="@string/enter_text"-->
+    <!--android:inputType="textMultiLine"-->
+    <!--android:padding="15dp"-->
+    <!--android:textColor="@color/black"-->
+    <!--android:textColorHint="@color/textcolor"-->
+    <!--android:textSize="17sp" />-->
+
+    <!--<View-->
+    <!--android:layout_width="1dp"-->
+    <!--android:layout_height="35dp"-->
+    <!--android:background="@color/textcolor" />-->
+
+    <!--<ImageButton-->
+    <!--android:id="@+id/btnVoice"-->
+    <!--android:onClick="voice"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:background="@color/white"-->
+    <!--android:padding="11dp"-->
+    <!--android:src="@drawable/ic_voice" />-->
+
+    <!--<ImageButton-->
+    <!--android:id="@+id/btnSend"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginEnd="4dp"-->
+    <!--android:background="@color/white"-->
+    <!--android:padding="11dp"-->
+    <!--android:src="@drawable/ic_send" />-->
 
